name:                twitter-conduit
version:             0.1.0
license:             BSD3
license-file:        LICENSE
author:              HATTORI Hiroki, Hideyuki Tanaka, Takahiro HIMURA
maintainer:          HATTORI Hiroki <seagull.kamome@gmail.com>
synopsis:            Twitter API package with conduit interface and Streaming API support.
description:         This package uses conduit package for access Twitter API.
category:            Web, Conduit
stability:           Experimental
cabal-version:       >=1.10
build-type:          Simple
homepage:            https://github.com/amutake/twitter-conduit

source-repository head
  type:                git
  location:            git://github.com/amutake/twitter-conduit.git

library
  exposed-modules:     Web.Twitter
                     , Web.Twitter.API
                     , Web.Twitter.Fetch
                     , Web.Twitter.Monad
                     , Web.Twitter.Post
                     , Web.Twitter.Param
                     , Web.Twitter.REST.Timelines
                     , Web.Twitter.REST.Tweets
                     , Web.Twitter.Stream
                     , Web.Twitter.Status
  other-modules:       Web.Twitter.General
                     , Web.Twitter.Internal
                     , Web.Twitter.Util
  build-depends:       base ==4.*
                     , transformers ==0.3.*
                     , mtl
                     , lifted-base
                     , monad-control
                     , authenticate-oauth
                     , resourcet
                     , conduit >=1.0
                     , failure
                     , http-types
                     , http-conduit >=2.0
                     , aeson
                     , attoparsec
                     , attoparsec-conduit >=1.0
                     , data-default
                     , bytestring
                     , text
                     , containers
                     , twitter-types
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
