name:                twitter-conduit
version:             0.1.0
license:             BSD3
license-file:        LICENSE
author:              Shohei Yasutake, HATTORI Hiroki, Hideyuki Tanaka, Takahiro HIMURA
maintainer:          Shohei Yasutake <amutake.s@gmail.com>
synopsis:            Twitter API package with conduit interface and Streaming API support.
description:         This package uses conduit package for access Twitter API.
category:            Web, Conduit
stability:           Experimental
cabal-version:       >=1.10
build-type:          Simple
homepage:            https://github.com/amutake/twitter-conduit

source-repository head
  type:                git
  location:            git://github.com/amutake/twitter-conduit.git

flag debug
  description:         enable debug logging
  default:             False

library
  exposed-modules:     Web.Twitter
                       Web.Twitter.Auth
                       Web.Twitter.Core
                       Web.Twitter.REST.DirectMessages
                       Web.Twitter.REST.Timelines
                       Web.Twitter.REST.Tweets
                       Web.Twitter.REST.Users
                       Web.Twitter.Streaming.Public
                       Web.Twitter.Streaming.User
                       Web.Twitter.Streaming.Site
                       Web.Twitter.Util
  other-modules:       Web.Twitter.General
                       Web.Twitter.Internal.Query
                       Web.Twitter.Internal.Types
                       Web.Twitter.Internal.Util
  build-depends:       base ==4.*
                     , transformers ==0.3.*
                     , mtl
                     , lifted-base
                     , monad-control
                     , authenticate-oauth
                     , resourcet
                     , conduit >=1.0
                     , failure
                     , http-types
                     , http-conduit >=2.0
                     , aeson
                     , attoparsec
                     , attoparsec-conduit >=1.0
                     , data-default
                     , bytestring
                     , text
                     , containers
                     , case-insensitive
                     , twitter-types
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-extensions:          OverloadedStrings, FlexibleContexts
  default-language:    Haskell2010
  if flag(debug)
    cpp-options:       -DDEBUG

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , hspec
                     , transformers
                     , mtl
                     , random
                     , text
                     , lifted-base
                     , twitter-conduit
  ghc-options:         -Wall
  default-language:    Haskell2010
